--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[lints.rust]
+unsafe_op_in_unsafe_fn = "forbid"
+unsafe_code = "forbid"
+
+[lints.clippy]
+enum_glob_use = { level = "deny" }
+pedantic = { level = "warn", priority = -1}
+nursery = { level = "warn", priority = -1}
+uninlined-format-args = "allow"
